* minor: java9+